<resources>
    <string name="app_name">NumberPickerView</string>
    <string name="switch_wrap_mode">switch wrap mode</string>
    <string name="switch_wrap_mode_true">switch wrap mode | current : true</string>
    <string name="switch_wrap_mode_false">switch wrap mode | current : false</string>
    <string name="content_1">set content 1</string>
    <string name="content_2">set content 2</string>
    <string name="scroll_downwards_2">scroll smoothly by 2 item</string>
    <string name="get_current_content">get picked content</string>
    <string name="to_time_picker_view">TimePickerView</string>
    <string name="activity_time_picker">TimePickerView</string>
    <string name="picked_content_is">picked content is : </string>
    <string name="hour_hint">H</string>
    <string name="minute_hint">M</string>
    <string name="get_data">get data</string>
    <string name="in_scroll_view">In ScrollView</string>
    <string name="show_in_dialog">Show in Dialog</string>
    <string name="change_font">Change Font</string>
    <string name="place_holder_above_2">HourPicker\'s callbacks is invoked in a new thread, the other 2 pickers\' in main thread</string>
    <string name="place_holder_below_1">Placeholder Button2</string>
    <string name="place_holder_below_2">Placeholder Button3</string>
    <string name="place_holder_below_3">Placeholder Button4</string>
    <string name="current_thread_name">callback\'s thread name : </string>
    <string name="current_picked_value">current picked value : </string>

    <string-array name="test_display_1">
        <item>Twinkle, twinkle, little star</item>
        <item>How I wonder what you are</item>
        <item>Up above the world so high</item>
        <item>Like a diamond in the sky</item>
    </string-array>

    <string-array name="test_display_2">
        <item>Dashing through the snow</item>
        <item>In a one-horse open sleigh</item>
        <item>Over the fields we go</item>
        <item>Laughing all the way</item>
        <item>Bells on bob-tail ring</item>
        <item>making spirits bright</item>
        <item>What fun it is to ride and sing</item>
        <item>A sleighing song tonight</item>
        <item>Jingle bells, jingle bells</item>
        <item>jingle all the way</item>
        <item>O what fun it is to ride</item>
        <item>In a one-horse open sleigh</item>
        <item>Now the ground is white</item>
        <item>Go it while you are young</item>
        <item>Take the girls tonight</item>
        <item>And sing this sleighing song</item>
    </string-array>

    <string-array name="hour_display">
        <item>12</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
    </string-array>

    <string-array name="minute_display">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
        <item>51</item>
        <item>52</item>
        <item>53</item>
        <item>54</item>
        <item>55</item>
        <item>56</item>
        <item>57</item>
        <item>58</item>
        <item>59</item>
    </string-array>

    <string-array name="half_day">
        <item>AM</item>
        <item>PM</item>
    </string-array>
</resources>