<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

    <cn.carbswang.android.numberpickerview.library.NumberPickerView
        android:id="@+id/picker"
        android:layout_width="wrap_content"
        android:layout_height="240dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="#11333333"
        android:contentDescription="test_number_picker_view"
        app:npv_ItemPaddingHorizental="5dp"
        app:npv_ItemPaddingVertical="5dp"
        app:npv_ShowCount="5"
        app:npv_TextSizeNormal="16sp"
        app:npv_TextSizeSelected="20sp"
        app:npv_WrapSelectorWheel="true"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/picker"
        android:layout_marginTop="20dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/content_buttons_0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp">

                <Button
                    android:id="@+id/button1"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:text="@string/switch_wrap_mode"
                    android:textAllCaps="false"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/content_buttons_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/content_buttons_0"
                android:layout_marginTop="2dp">

                <Button
                    android:id="@+id/button2"
                    android:layout_width="0dp"
                    android:layout_height="56dp"
                    android:layout_weight="1"
                    android:text="@string/content_1"
                    android:textAllCaps="false"/>

                <View
                    android:layout_width="2dp"
                    android:layout_height="56dp"
                    android:background="#ffffffff"/>

                <Button
                    android:id="@+id/button3"
                    android:layout_width="0dp"
                    android:layout_height="56dp"
                    android:layout_weight="1"
                    android:text="@string/content_2"
                    android:textAllCaps="false"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/content_buttons_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/content_buttons_1"
                android:layout_marginTop="2dp">

                <Button
                    android:id="@+id/button4"
                    android:layout_width="0dp"
                    android:layout_height="56dp"
                    android:layout_weight="1"
                    android:text="@string/scroll_downwards_2"
                    android:textAllCaps="false"/>

                <View
                    android:layout_width="2dp"
                    android:layout_height="56dp"
                    android:background="#ffffffff"/>

                <Button
                    android:id="@+id/button5"
                    android:layout_width="0dp"
                    android:layout_height="56dp"
                    android:layout_weight="1"
                    android:text="@string/get_current_content"
                    android:textAllCaps="false"/>

            </LinearLayout>

            <Button
                android:id="@+id/button6"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_below="@id/content_buttons_2"
                android:layout_marginTop="2dp"
                android:text="@string/to_time_picker_view"
                android:textAllCaps="false"/>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>